--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    <meta name="google-site-verification" content="googlebdd3c1a23fd73fe6.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>N10 Humanitaire - Association pour jeunes talents footballeurs</title>
+    <meta name="description" content="N10 Humanitaire est une association engagée dans le développement et l’aide humanitaire.">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
